# gb-rs

./: .gitignore  .pre-commit  Cargo.toml  Makefile  README.md  test.py
core/: Cargo.toml  colors.py  test.py
core/src/: alu.rs  cart.rs  controller.rs  cpu.rs  display.rs  dma.rs  emptymem.rs  fakemem.rs  gb.rs  hdma.rs  instr.rs  lib.rs  mem.rs  mmu.rs  peripherals.rs  rewind.rs  serial.rs  sound.rs  timer.rs  wasm.rs
core/src/sound/: channel.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs
dis/: Cargo.toml
dis/src/: main.rs
sdl/: Cargo.toml
sdl/src/: main.rs
src/: alu.rs  bin.rs  cart.rs  controller.rs  cpu.rs  dis.rs  display.rs  dma.rs  emptymem.rs  fakemem.rs  gb.rs  instr.rs  lib.rs  mem.rs  mmu.rs  peripherals.rs  serial.rs  timer.rs
src/sound/: channel.rs  channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/static/: index.hml  index.html
