[package]
name = "gb"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]

[[bin]]
name = "gb-rs"
path = "src/bin.rs"

[profile.release]
debug = true

[dependencies]
enum_primitive = "*"
clap = "2.31"
itertools = "*"
zip = "0.4"
num = "0.2.0"

[features]
strict = []

[dependencies.sdl2]
default-features = false
features = ["gfx"]
version = "0.31.0"