[package]
name = "gb"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2018"

[dependencies]
enum_primitive = "*"
itertools = "*"
num = "0.2.0"
vcd = "0.4.0"
lazy_static = "1.1.0"
dimensioned = "0.7.0"
num-traits = "0.2.8"
modular-bitfield = { git = "https://github.com/Robbepop/modular-bitfield", rev="d99ca742"}
serde-diff = "0.1.3"
serde = "1.0.102"
serde_derive = "1.0.102"
#modular-bitfield = {path = "../../modular-bitfield"}

[features]
vcd_dump = []
