[package]
name = "gb"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

[dependencies]
enum_primitive = "0.1.1"
itertools = "0.10.3"
num = "0.4.0"
vcd = "0.6.1"
dimensioned = "0.8.0"
num-traits = "0.2.14"
modular-bitfield = { git = "https://github.com/Robbepop/modular-bitfield", rev = "d99ca742"}
serde = "1.0.136"
serde_derive = "1.0.136"
serde-big-array = "0.3.2"
serde_bytes = "0.11.5"
typetag = "0.2.19"
bincode = "1.3.3"
dyn-clone = "1.0.5"

[features]
default = ["std"]
vcd_dump = []
strict = []
oibit = []
approx = []
std = []