[package]
name = "dis"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
itertools = "0.10.3"
clap = "3.1.6"
gb = { path = "../core" }
intervaltree = "0.2.7"

[dev-dependencies]
tempdir = "0.3.7"
