[package]
name = "sdl"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5"
clap = "2.31"
gb = { path = "../core" }
modular-bitfield = "0.6.0"

[dependencies.sdl2]
default-features = false
features = ["gfx"]
version = "0.31.0"
