[package]
name = "wasm"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2018"

[dependencies]
gb = { path = "../core" }
wasm-bindgen = "0.2.42"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3.27"

[dependencies.web-sys]
version = "0.3.28"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console',
  'KeyboardEvent',
  'AudioContext',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioBufferOptions',
  'AudioContextOptions',
  'AudioStreamTrack',
  'MediaStream',
  'AudioNode',
  'AudioDestinationNode',
  'AudioParam',
  'Event',
  'MediaStreamAudioSourceNode',
  'MediaStreamAudioSourceOptions',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]
