[package]
name = "wasm"
version = "0.1.0"
authors = ["Mitch Souders <mitch.souders@gmail.com>"]
edition = "2021"

[dependencies]
gb = { path = "../core" }
wasm-bindgen = "0.2.79"
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.56"

[dependencies.web-sys]
version = "0.3.56"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'console',
  'KeyboardEvent',
  'AudioContext',
  'AudioBuffer',
  'AudioBufferSourceNode',
  'AudioBufferOptions',
  'AudioContextOptions',
  'AudioStreamTrack',
  'MediaStream',
  'AudioNode',
  'AudioDestinationNode',
  'AudioParam',
  'Event',
  'MediaStreamAudioSourceNode',
  'MediaStreamAudioSourceOptions',
  'Performance'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
